<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LiHuaBin</string>
    <string name="select_subject">选择学习类别</string>
    <string name="peiyin_text">配音</string>
    <string name="fayin_text">发音</string>
    <string name="custom_menu">自定义资源</string>
    <string name="custom_peiyin">自定义配音</string>
    <string name="custom_fayin">自定义发音</string>
    <string name="custom_pic">自定义图像</string>
    <string name="reset_all">全部恢复默认</string>
    <string name="reset_all_succeed">全部恢复成功</string>
    <string name="reset_all_failed">全部恢复成功</string>
    <string name="back_to_subject">返回选择类别</string>
    <string name="in_new_version">该功能将在后续版本中实现</string>
    <string name="set_call">录制发音</string>
    <string name="set_voice">录制配音</string>
    <string name="hold_to_start">按住开始录音</string>
    <string name="reset_to_stop">松开结束录音</string>
    <string name="newfile_save">新声音保存成功</string>
    <string name="to_default_succeed">恢复默认成功</string>
    <string name="no_sdcard">没有内存卡</string>
    <string name="record_too_short">录制时间太短，请重新录制</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_play">PlayActivity</string>

</resources>
