<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme">

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:background="@drawable/bg_2">


        <Button
            android:id="@+id/peiyin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/peiyin_text"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="70dp" />

        <Button
            android:id="@+id/fayin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/fayin_text"
            android:layout_below="@+id/menuImg"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="60dp" />


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_toStartOf="@+id/peiyin"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/menuImg"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="openMenu"
            android:src="@drawable/menu1" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/arrow_left"
                android:onClick="click" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="爸爸"
                android:textColor="@android:color/black"
                android:textSize="28dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/arrow_right"
                android:onClick="click" />
        </LinearLayout>
    </RelativeLayout>


    <!-- 侧滑菜单 -->


    <LinearLayout
        android:id="@+id/menuView"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#e0eeeeee"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/custom_menu"
            android:textSize="35sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="0dp"
            android:text="_________________________________________________________________________"
            android:textSize="10sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/setFayin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:onClick="click"
                    android:text="@string/custom_fayin" />

                <Button
                    android:id="@+id/setPeiyin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:onClick="click"
                    android:text="@string/custom_peiyin" />

                <Button
                    android:id="@+id/setPic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:onClick="click"
                    android:text="@string/custom_pic" />

                <Button
                    android:id="@+id/resetAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:onClick="click"
                    android:text="@string/reset_all" />

                <Button
                    android:id="@+id/close"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:onClick="click"
                    android:text="@string/back_to_subject" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
